# rustmerger

./: .gitignore  Cargo.toml  README.md  rustmerger_config.json
src/: app_state.rs  cli.rs  commands.rs  config.rs  config_validator.rs  core.rs  display.rs  errors.rs  file_utils.rs  lib.rs  logging.rs  main.rs  processing.rs  progress.rs  signal_handler.rs
src/encoding/: converter.rs  detector.rs  mod.rs  stats.rs  strategies.rs
